objects/EC_AccObj1__c.object
<CustomObject>
    <fields>
        <fullName>Afield__c</fullName>
        <label>Afield</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ECOBjField1__c</fullName>
        <description>test6789</description>
        <label>ECOBjField1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EaField__c</fullName>
        <label>EaField</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pl3__c</fullName>
        <description>Test new678111</description>
        <label>Pl3</label>
        <type>Email</type>
    </fields>
</CustomObject>